# multifunction-ai-assistant

./: .gitignore  README.md  app.py  main.py  pyproject.toml  test_agent.py  test_chat_service.py  test_context_builder.py  test_conversation.py  test_embedding.py  test_factory.py  test_gemini.py  test_groq.py  test_image_loader.py  test_ingestion.py  test_loader.py  test_memory.py  test_ocr.py  test_planner.py  test_planning_context.py  test_rag.py  test_rag_tool.py  test_registry.py  test_retriever.py  test_retriever_service.py  test_splitter.py  test_tool_executor.py  test_tool_registry.py  test_validator.py  test_vector_store.py
src/agents/: agent_executor.py  base_tool.py  decision_validator.py  models.py  planner.py  planning_context.py  register_tools.py  state.py  tool_executor.py  tool_registry.py
src/config/: settings.py
src/conversation/: conversation_manager.py  conversation_models.py  history_formatter.py
src/exceptions/: llm_exceptions.py
src/ingestion/: base_loader.py  file_detector.py  image_loader.py  ingestion_service.py  loader_factory.py  pdf_loader.py
src/llms/: gemini_provider.py  groq_provider.py  llm_factory.py
src/memory/: conversation_memory.py  memory_manager.py
src/models/: chat_models.py
src/ocr/: base_provider.py  easyocr_provider.py  ocr_factory.py  ocr_service.py
src/prompts/: agent_prompt.py  chat_prompt.py  rag_prompt.py
src/rag/: context_builder.py  context_manager.py  document_loader.py  embeddings.py  models.py  rag_service.py  retriever.py  text_splitter.py  vector_store.py
src/services/: chat_service.py  (+3 more)
(+13 files in other folders)
