[project]
name = "multifunction-ai-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "faiss-cpu>=1.14.3",
    "google-genai>=2.10.0",
    "langchain>=1.3.11",
    "langchain-community>=0.4.2",
    "langchain-google-genai>=4.2.6",
    "langchain-groq>=1.1.3",
    "langchain-huggingface>=1.2.2",
    "langchain-text-splitters>=1.1.2",
    "pydantic>=2.13.4",
    "pymupdf>=1.28.0",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.9.0",
    "sentence-transformers>=5.6.0",
    "streamlit>=1.58.0",
]
